<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textSize="@dimen/text_title"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_sm"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_sm"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_sm"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_sm"
        android:layout_marginBottom="@dimen/spacing_md"
        android:hint="@string/expense_title_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expenseTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_body" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_sm"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_sm"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_sm"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_sm"
        app:prefixText="₪"
        android:layout_marginBottom="@dimen/spacing_md"
        android:hint="@string/expense_amount_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expenseAmountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_body" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_category"
        android:textSize="@dimen/text_body"
        android:textColor="@color/text_secondary"
        android:layout_marginBottom="@dimen/spacing_sm" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@drawable/bg_edittext"
        android:paddingStart="@dimen/spacing_md"
        android:paddingEnd="@dimen/spacing_md" />
</LinearLayout>
